updated comments and readme

--- a/data/jbrowse.conf
+++ b/data/jbrowse.conf
@@ -12,7 +12,7 @@ displayColumns =
   + label
   + key
   + datatype
-  + donor
+  + case
   + project
   + primarySite
 ## optionally sort the faceted track selector by column (use the names from displayColumns)
