--- a/data/tracks.conf
+++ b/data/tracks.conf
@@ -3,12 +3,16 @@ storeClass=gdc-viewer/Store/SeqFeature/SimpleSomaticMutations
 type=JBrowse/View/Track/CanvasVariants
 key=GDC SSM
 metadata.datatype=SSM
+unsafePopup=true
+fmtDetailValue_projects=function(value) { return "<div id='projects-" + value +  "'></div>";}
 
 [tracks.GDC_Genes]
 storeClass=gdc-viewer/Store/SeqFeature/Genes
 type=JBrowse/View/Track/CanvasVariants
 key=GDC Genes
 metadata.datatype=Gene
+unsafePopup=true
+fmtDetailValue_projects=function(value) { return "<div id='projects-" + value +  "'></div>";}
 
 [tracks.GDC_CNV]
 storeClass=gdc-viewer/Store/SeqFeature/CNVs
