--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -25,12 +25,7 @@ RUN git clone https://github.com/agduncan94/gdc-viewer /gdc-viewer/ && \
     cat ./data/jbrowse.conf > /jbrowse/jbrowse.conf
 
 # Setup JBrowse
-RUN ./setup.sh && \
-    ./bin/cpanm --force JSON Hash::Merge PerlIO::gzip Devel::Size \
-    Heap::Simple Heap::Simple::XS List::MoreUtils Exception::Class Test::Warn Bio::Perl \
-    Bio::DB::SeqFeature::Store File::Next Bio::DB::Das::Chado && \
-    rm -rf /root/.cpan/
-
+RUN ./setup.sh
 
 # Expose port 3000
 EXPOSE 3000
