--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM node:latest
 
 LABEL maintainer="andrew.duncan@oicr.on.ca"
 
-ENV JBROWSE_VERSION 1.16.6
+ENV JBROWSE_VERSION=1.16.6
 ENV PLUGIN_VERSION=develop
 
 # Install dependencies
