--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,10 @@ FROM node:latest
 
 LABEL maintainer="andrew.duncan@oicr.on.ca"
 
+ARG plugin_version=develop
+
 ENV JBROWSE_VERSION 1.16.6
-#ENV PLUGIN_VERSION develop
+ENV PLUGIN_VERSION=plugin_version
 
 # Install dependencies
 RUN apt-get -qq update --fix-missing
