--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A JBrowse plugin for viewing GDC data",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "e2e": "npx cypress run"
   },
   "repository": {
     "type": "git",
