--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "jbrowsePlugin": {
     "name": "GDCViewer"
   },
-  "homepage": "https://github.com/agduncan94/gdc-viewer#readme",
+  "homepage": "https://agduncan94.github.io/gdc-viewer/",
   "devDependencies": {
     "cypress": "^3.5.0"
   }
