add more example tracks

--- a/data/tracks.conf
+++ b/data/tracks.conf
@@ -15,3 +15,17 @@ storeClass=gdc-viewer/Store/SeqFeature/CNVs
 type=gdc-viewer/View/Track/CNVTrack
 key=GDC CNV
 metadata.datatype=CNV
+
+[tracks.GDC_SSM-Cancer_Gene_Census]
+storeClass=gdc-viewer/Store/SeqFeature/SimpleSomaticMutations
+type=gdc-viewer/View/Track/SSMTrack
+key=GDC SSM - Cancer Gene Census
+metadata.datatype=SSM
+filters={"op":"and","content":[{"op":"in","content":{"field":"genes.is_cancer_gene_census","value":["1"]}}]}
+
+[tracks.GDC_Genes-Cancer_Gene_Census]
+storeClass=gdc-viewer/Store/SeqFeature/Genes
+type=gdc-viewer/View/Track/GeneTrack
+key=GDC Genes - Cancer Gene Census
+metadata.datatype=Gene
+filters={"op":"and","content":[{"op":"in","content":{"field":"genes.is_cancer_gene_census","value":["1"]}}]}
