--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@
 title: GDC Viewer
 description: >- # this means to ignore newlines until "baseurl:"
   A JBrowse plugin for interacting with the GDC portal
-baseurl: "/gdc-viewer" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://agduncan94.github.io/gdc-viewer" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
