--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agduncan94/gdc-viewer.git"
+    "url": "git+https://github.com/LincolnSteinLab/gdc-viewer.git"
   },
   "keywords": [
     "gdc",
@@ -21,12 +21,12 @@
   "author": "Andrew Duncan",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/agduncan94/gdc-viewer/issues"
+    "url": "https://github.com/LincolnSteinLab/gdc-viewer/issues"
   },
   "jbrowsePlugin": {
     "name": "GDCViewer"
   },
-  "homepage": "https://agduncan94.github.io/gdc-viewer/",
+  "homepage": "https://lincolnsteinlab.github.io/gdc-viewer/",
   "devDependencies": {
     "cypress": "^4.7.0"
   }
