--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -8,7 +8,11 @@ source "https://rubygems.org"
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
-gem "jekyll", "~> 3.8.7"
+gem "jekyll", "~> 3.9.0"
+
+# Jekyll depedency specifications (fixes Dependabot alerts)
+gem "kramdown", ">= 2.3.0"
+gem "kramdown-parser-gfm"
 
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
 gem "minima", "~> 2.5.1"
