[fix-failed-tests] adjusts tests for new gdc data; forces node:14 in docker file due to incompatability (#116)
* fixing expected retrieved data

* build failure on node-sass, changing node version on dockerfile

Co-authored-by: Caroline Bridge <cbridge@ML6495-CBRIDGE.local>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,10 @@
-FROM node:latest
+FROM node:14.16.1
 
 LABEL maintainer="gregory.hogue@oicr.on.ca"
 
 ARG plugin_version=develop
 
-ENV JBROWSE_VERSION 1.16.10
+ENV JBROWSE_VERSION 1.16.11
 ENV PLUGIN_VERSION=$plugin_version
 
 # Install dependencies
